--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,21 @@
+*{
+    margin: 0;
+    padding: 0;
+    border-style: none;
+}
+
+a{
+    text-decoration: none;
+    color: #000;
+}
+
 input[type=number]::-webkit-inner-spin-button{
     -webkit-appearance: none;
+}
+
+header{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 1em;
 }
